[package]
name = "va-ts"
version = "0.0.2"
edition = "2018"
authors = ["Ivan Egorov <vany.egorov@gmail.com>"]
license = "MIT"
repository = "https://github.com/video-audio/va-ts"
homepage = "https://github.com/video-audio/va-ts"
documentation = "https://docs.rs/va-ts/0.0.2/va-ts"
description = """
MPEG-TS implementation for Rust
"""
keywords = [
    "ts", "mpeg-ts", "dvb",
    "muxer", "demuxer"
]
categories = ["video-audio"]
exclude = [
    "cluster/*",
    "dumps/*",
    "run.sh"
]

[dependencies]
chrono = "~0.4"
clap = "~2.33"
encoding_rs = "~0.8"
url = "~1.7"
