[package]
name = "va-ts"
version = "0.0.3"
edition = "2018"
authors = ["Ivan Egorov <vany.egorov@gmail.com>"]
license = "MIT"
repository = "https://github.com/video-audio/va-ts"
homepage = "https://github.com/video-audio/va-ts"
documentation = "https://docs.rs/va-ts/0.0.3/va-ts"
description = """
MPEG-TS implementation for Rust
"""
keywords = [
    "ts", "mpeg-ts", "dvb",
    "muxer", "demuxer"
]
categories = ["video-audio"]
exclude = [
    "dockerfiles/*",
    "dumps/*",
    "run.sh"
]

[dependencies]
chrono = "~0.4"
encoding_rs = "~0.8"

[dev-dependencies]
clap = "~2.33"
url = "~2.1"
